# deterministic-ml

./: .cruft.json  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: COMPUTE_PROVIDERS.MD  IMPROVING_CONSITENCY.md  MANUAL_INTEGRATION_TESTING.md  TO_BE_INVESTIGATED.md
src/deterministic_ml/_internal/: __init__.py  deterministic.py  sysinfo.py
src/deterministic_ml/_v2/: __init__.py
src/deterministic_ml/v1/: __init__.py
tests/integration/: README.md  analyze.py  run.py
tests/integration/experiments/vllm_16g/: README.md  __main__.py
tests/integration/experiments/vllm_llama_3_70b_instruct_awq/: README.md  __main__.py
tests/integration/experiments/vllm_phi35/: README.md  __main__.py  requirements.txt
tests/integration/results/vllm_16g/2024-08-27_14-21-55_1x_1x_rtx_a5000/: experiment.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_16g/2024-08-27_14-30-01_1x_1x_rtx_a5000/: experiment.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_16g/2024-08-27_14-39-44_1x_1x_rtx_a5000/: experiment.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_16g/2024-08-27_14-44-48_1x_1x_rtx_a5000/: experiment.yaml  output.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_16g/2024-08-27_14-56-46_1x_rtx_4090/: experiment.yaml  output.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_16g/2024-08-27_14-58-04_1x_rtx_4080s/: experiment.yaml  output.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_16g/2024-08-27_15-26-43_1x_rtx_4090/: experiment.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_16g/2024-08-27_15-27-49_1x_rtx_a6000/: experiment.yaml  output.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_16g/2024-08-27_15-36-20_1x_a100_sxm4/: experiment.yaml  output.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_16g/2024-08-27_15-54-05_1x_rtx_a4000/: experiment.yaml  output.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_llama_3_70b_instruct_awq/2024-08-22_12-16-19_1x_a100_sxm4_80gb/: experiment.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_llama_3_70b_instruct_awq/2024-08-22_12-23-42_2x_a100_sxm4_40gb/: experiment.yaml  output.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_llama_3_70b_instruct_awq/2024-08-22_12-26-03_4x_rtx_4000ada/: experiment.yaml  output.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_llama_3_70b_instruct_awq/2024-08-22_12-26-40_2x_rtx_a6000/: experiment.yaml  output.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_llama_3_70b_instruct_awq/2024-08-22_12-49-14_1x_h100_nvl/: experiment.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_llama_3_70b_instruct_awq/2024-08-22_12-54-54_1x_a100x/: experiment.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_llama_3_70b_instruct_awq/2024-08-22_12-58-24_1x_a100_pcie/: experiment.yaml  output.yaml  stdout.txt  sysinfo.yaml
tests/integration/results/vllm_llama_3_70b_instruct_awq/2024-08-22_13-32-37_1x_h100_pcie/: experiment.yaml  output.yaml  stdout.txt  sysinfo.yaml
tests/integration/tools/: exp.py  ssh.py
tests/unit/api/: test_setup.py
tests/unit/internal/: test_deterministic.py  test_sysinfo.py
(+14 files in other folders)
